Update Jenkinsfilek